--- a/src/style.css
+++ b/src/style.css
@@ -2,97 +2,111 @@
     padding: 0px;
     margin: 0px;
 }
-
-body{
-    overflow-y: scroll;
-    overflow-x: hidden;
-}
-
-p{
-    font-weight: lighter;
-}
-
-.fondo-img{
-    width: 100%;
-    height: 100vh;
-    background-color: cadetblue;
-}
-.fondo-img img{
-   width: 100%;
-    height: 100vh;
-}
-.container{
-    width: 100%;
-    position: absolute;
-    margin-top: -41.8%;
-    height: 100vh;
-    display: flex;
-
-
-
+:root{
+    --margin-top-posicion: 7%;
 }
 .logo{
-
-    width: 50%;
-    height: 100vh;
-    display: flex;
     color: white;
+    padding: 10px;
+}
+.logo h2{
+    font-family: "Ubuntu Mono";
+    font-size: 30px;
+}
+.logo p{
+    margin-top: 10px;
     font-family: Verdana;
-    font-weight: bold;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    color: #9a9a9a;
 }
-.container-form{
-
+.container-card{
+    display: flex;
+}
+.card-info{
     width: 50%;
     height: 100vh;
     display: flex;
-    align-items: center;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
+    background-color: #17315a;
 }
-.card{
-    background-color: white;
-    border-radius: 10px;
-    width: 70%;
-    height: 80%;
+.card-login{
+    width: 50%;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-color: white;
 }
-.card > div{
-    padding: 20px;
-}
-.card h1{
-    color: #323232;
-    font-family: 'Raleway', sans-serif;
-}
-.form input{
-    width: 300px;
-    height: 20px;
+.card-login div{
     padding: 10px;
+}
+.titulo{
 
 }
-.button-start{
-    width: 300px;
-    height: 50px;
-    background-color: #156eff;
-    border: 1px solid #156eff;
-    color: white;
-    border-radius: 10px;
-    transition: 1s ease-in;
-    padding: 10px;
-}
-.button-start:hover{
-    background-color: white;
-    border: 1px solid #156eff;
-    color: #156eff;
-    transition: 1s ease-in-out;
+.card-login h2{
+    font-family: Arial;
+    font-size: 30px;
+    color: black;
 }
 .form{
-    font-family: 'Raleway', sans-serif;
+    width: 70%;
+    display: flex;
+    flex-direction: column;
 }
-.h1{
-    font-family: -apple-system;
+.form input{
+    padding: 15px;
+    margin: 10px;
+    border: 1px solid #c7c7c7;
+    border-radius: 7px;
+}
+.contenedor-button{
+
+    width: 100vh;
+    display: flex;
+    justify-content: center;
+}
+.button-inicio{
+    background-color: #d1e0fd;
+    color: #91abdc;
+    width: 40%;
+    border-radius: 7px;
+    border: 1px solid #d1e0fd;
+    padding: 10px;
+}
+.posicion-img{
+
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    background-image: url("https://images.unsplash.com/photo-1624948737703-39a18531ae0d?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=755&q=80");
+    background-position: center;
+    background-size: cover;
+    transition: 1s ease-in-out;
+}
+.posicion-img:hover{
+    width: 70px;
+    height: 70px;
+    transition: 0.5s ease-in;
+    border:3px dotted #0c7cfa;
+}
+.posicion-img2 {
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    margin-right: 35%;
+    margin-top: -5%;
+    position: absolute;
+    background-image: url("https://images.unsplash.com/photo-1624948779888-6c04d2817919?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1yZWxhdGVkfDEwfHx8ZW58MHx8fHw%3D&auto=format&fit=crop&w=500&q=60");
+    background-position: center;
+    background-size: cover;
+    transition: 0.5s ease-in;
+}
+.posicion-img2:hover{
+    width: 70px;
+    height: 70px;
+    transition: 0.5s ease-in;
+    border:3px dotted #0c7cfa;
 }
