--- a/src/custom.css
+++ b/src/custom.css
@@ -52,20 +52,6 @@
     height: 60vh;
     margin-left: 10px;
 }
-
-#imagenUsuario {
-    width:70px;
-    height:70px;
-    border-radius:50%;
-    border:2px solid #666;
-}
-
-.item{
-    display: flex;
-    align-items: center;
-    margin-top: 25px;
-}
-
 .nombreUsuario{
     margin-left: 10px;
 }
@@ -192,7 +178,7 @@
     align-items: center;
     width: 100%;
     height: 70vh;
-    background-color: mistyrose;
+    background-color: white;
 }
 .canva {
     width: 52%;
@@ -339,25 +325,200 @@ padding: 10px;
  
 .list-user-conectados{
     
-    background-color: grey;
+    background-color: white;
     width: 15%;
     height: 50vh;
     position: absolute;
     margin-left: 70%;
     margin-top: 4%;
+    border-radius: 20px;
+    border: solid 1px #EAEAEA;
     display: none;
     overflow:hidden;
-     
     overflow-y:scroll
 }
+.list-user-conectados::-webkit-scrollbar{
+    width: 8px;     /* Tamaño del scroll en vertical */
+    height: 8px;    /* Tamaño del scroll en horizontal */
+}
+/* Ponemos un color de fondo y redondeamos las esquinas del thumb */
+.list-user-conectados::-webkit-scrollbar-thumb{
+    background: #ccc;
+    border-radius: 4px;
+}
+/* Cambiamos el fondo y agregamos una sombra cuando esté en hover */
+.list-user-conectados::-webkit-scrollbar-thumb:hover {
+    background: #b3b3b3;
+}
+/* Ponemos un color de fondo y redondeamos las esquinas del track */
+.list-user-conectados::-webkit-scrollbar-track {
+    background: #e1e1e1;
+    border-radius: 4px;
+}
+/* Cambiamos el fondo cuando esté en active o hover */
+.list-user-conectados::-webkit-scrollbar-track:hover,
+.list-user-conectados::-webkit-scrollbar-track:active {
+    background: #d4d4d4;
+}
+.item{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* top right bottom left*/
+    margin: 15px 0px 15px 8px;
+    background-color: white;
+    border-radius: 15px;
+    width: 95%;
+    height: 5vh;
+}
+.item:hover{
+    -webkit-box-shadow: 0px 0px 16px -4px #000000;
+    box-shadow: 0px 0px 16px -4px #000000;
+}
+.item div{
+    margin-right: 2px;
+    margin-left: 2px;
+}
+.textoInvitacion{
+    width: 35%;
+    font-size: 20px;
+}
+.botonesInvitacion{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 35%;
+}
+.botonesInvitacion div{
+    width: 100%;
+}
+.botonesInvitacion button{
+    width: 100%;
+    height: 2vh;
+    margin-left: -2px;
+    margin-top: 2px;
+    margin-bottom: 2px;
+    border-radius: 10px;
+    color: white;
+    border: none;
+}
+.botonesInvitacion button:hover{
+    -webkit-box-shadow: 0px 0px 16px -4px #000000;
+    box-shadow: 0px 0px 16px -4px #000000;
+}
+#btnAceptar{
+    background-color: mediumseagreen;
+}
+#btnRechazar{
+    background-color: orangered;
+}
+#imagenUsuario {
+    width:50px;
+    height:50px;
+    border-radius:50%;
+    margin-left: -10px;
+    margin-right: 10px;
+    border:1px solid #666;
+}
+
 .notificacion{
-    background-color: pink;
+    background-color: white;
     width: 15%;
     height: 50vh;
     position: absolute;
     margin-left: 85%;
     margin-top: 4%;
+    border: solid 1px #EAEAEA;
+    border-radius: 20px;
     display: none;
+    overflow:hidden;
+    overflow-y:scroll
+}
+.notificacion::-webkit-scrollbar{
+    width: 8px;     /* Tamaño del scroll en vertical */
+    height: 8px;    /* Tamaño del scroll en horizontal */
+}
+.notificacion::-webkit-scrollbar-thumb{
+    background: #ccc;
+    border-radius: 4px;
+}
+.notificacion::-webkit-scrollbar-thumb:hover {
+    background: #b3b3b3;
+}
+.notificacion::-webkit-scrollbar-track {
+    background: #e1e1e1;
+    border-radius: 4px;
+}
+.notificacion::-webkit-scrollbar-track:hover,
+.notificacion::-webkit-scrollbar-track:active {
+    background: #d4d4d4;
+}
+.item2{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 98%;
+    height: 12vh;
+    /* top right bottom left*/
+    margin: 5px 0px 5px 5px;
+    background-color: white;
+    border-radius: 20px;
+}
+.item2:hover{
+    -webkit-box-shadow: 0px 0px 16px -4px #000000;
+    box-shadow: 0px 0px 16px -4px #000000;
+}
+#imagenAmigo{
+    width:135px;
+    height:135px;
+    border-radius: 10%;
+}
+#centrarImagen{
+    display: flex;
+    justify-content: center;
+}
+.centrarNombreAmigo{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+.datosAmigo{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40%;
+    height: 12vh;
+    border-radius: 20px;
+}
+.divBotonesListaAmigos{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 60%;
+    height: 12vh;
+    border-radius: 20px;
+}
+.centrarBotonInv{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+#divDatosIzq{
+    width: 100%;
+}
+.botonInvitar{
+    width: 100%;
+    height: 2.5vh;
+    border: none;
+    border-radius: 20px;
+    color: white;
+    font-size: 20px;
+    background-color: dodgerblue;
+}
+.botonInvitar:hover{
+    -webkit-box-shadow: 0px 0px 16px -4px #000000;
+    box-shadow: 0px 0px 16px -4px #000000;
 }
 /* media */
 @media (max-width: 1400px){
