--- a/src/style.css
+++ b/src/style.css
@@ -1,284 +1,195 @@
 
-body{
-   overflow-x: hidden;
-    overflow-y: hidden;
-}
-*{
-    padding: 0px;
-    margin: 0px;
-}
 
-.container{
-    display: flex;
-}
-
-.card-one{
-    width: 60%;
-    height: 100vh;
-    background-color: thistle;
-    background-image: url("https://images.unsplash.com/photo-1508153460964-48ffffcb0829?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: bottom;
-}
-.posicioncard{
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    color: white;
+.logo{
+    margin-top: 2%;
+    color: #4b7dfa;
     font-family: Arial, Helvetica, sans-serif;
-}
-.card-one h2{
-    margin-top: 10%;
-    margin-left: 2%;
-}
-.card-two{
-    width: 40%;
-    height: 100vh;
-    background-color: steelblue;
-}
-
-.card-one img{
-    width: 50px;
-    height: 50px;
-}
-.information{
-    text-align: center;
-}
-.container-form{
     display: flex;
-    width: 100%;
-    height: 100vh;
     justify-content: center;
     align-items: center;
+    width: 100%;  
+}
+.logo h2{
+    margin-left: 1%;
 }
 .card-form{
-    padding: 10px;
-    border-radius: 10px;
+  margin: auto;
+    margin-top: 4%;
+    width: 40%;
+    height: 50vh;
     display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    background-color: white;
-    width: 65%;
-    height: 60%;
+    justify-content: center;
+  
+   
 }
-.text-form{
-    text-align: center;
+
+.form{
+    width: 100%;
+  
+   
+}
+
+.form h2{
     font-family: Arial, Helvetica, sans-serif;
+    font-size: 30px;
 }
-.text-form h2{
-    font-family: Arial, Helvetica, sans-serif;
+.form p{
+    
+    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: #27343b;
+    font-size: 15px;
 }
-.formulario{
-    display: flex;
-    flex-direction: column;
-
-    font-family: Arial, Helvetica, sans-serif;
-
-}
-.formulario input{
-    padding-top: 10px;
-    padding-left: 10px;
-    border: 1px solid rgb(189, 189, 189);
-    padding-bottom: 10px;
-
-}
-.formulario > input{
-    margin: 10px;
-
-}
-.button-iniciar{
-    background-color: #3c7dfa;
+.input-mail{
     border: none;
-    padding: 10px 40px 10px 40px;
-    border-radius: 5px;
+    width: 95%;
+    border-bottom: 1px solid #e0e0e0;
+    padding: 10px;
+    margin-top: 10%;
+    font-size: 16px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.message-error{
+    display: none;
+}
+.message-error-button{
+    transition: 4s ease-in-out;
+    display: none;
+    margin-top: 2%;
+    background-color: #f8d7da;
+    width: 96%;
+    padding: 10px;
+}
+.message-error-button p{
+    color: #932939;
+}
+.button-sign-in{
+    margin-top: 10%;
+    background-color: #107cfa;
     color: white;
     font-family: Arial, Helvetica, sans-serif;
+    border: none;
+    padding: 10px;
+    width: 100%;
+    font-weight: bold;
+    font-size: 15px;
+    border-radius: 5px
 }
-/* 400px - 900px - 1200px - 1080px - 1990px-  */
-@media (max-width: 600px) {
-    body{
-        overflow-y: hidden;
-    }
-    .posicioncard{
-        flex-direction: column;
-        align-items: center;
-        justify-content: flex-start;
-        color: white;
-        margin-top: 30px;
-    }
-    .card-one{
-        width: 100%;
-    }
-    .card-two{
-        width: 0%;
-    }
-    .container-form{
-        margin-top: 10%;
-        margin-left: -98%;
-        position: absolute;
-    }
+.divider{
+    width: 1px;
+    height: 20px;
+    background-color: #107cfa;
 }
-@media (min-width: 600px){
-    body{
-        overflow-y: hidden;
-    }
-    .posicioncard{
-        align-items: center;
-        flex-direction: column;
-        color: white;
-        margin-top: 12%;
-    }
-    .card-one{
-        width: 100%;
-    }
-    .card-two{
-        overflow-x: hidden;
-        width: 0%;
-    }
-    .container-form{
-        width: 100%;
-
-        margin-top: 10%;
-        margin-left: -100%;
-        position: absolute;
-    }
-    .card-form .formulario input{
-        width: 380px;
-
-    }
+.seccion-Utils{
+    width: 100%;
+    display: flex;
+    margin-top: 5%;
+    align-items: center;
 }
-@media (min-width: 900px){
-    .posicioncard{
-        justify-content: center;
-        margin-top: 0%;
-    }
-    .card-one{
-        width: 60%;
-    }
-    .card-two{
-        width: 40%;
-    }
-    .container-form{
-        margin-top: 0%;
-        margin-left: 0%;
-        position: relative;
-    }
-    .card-form .formulario input{
-        width: 200px;
-
-    }
+.seccion-Utils p{
+    color: #107cfa;
 }
-@media (max-width:1300px){
-    .formulario input{
-        width: 200px;
-    }
-    .card-form{
-        height: 40%;
-    }
-
-
-}
-@media (min-width: 1300px){
-    .card-form .formulario input{
-        width: 250px;
-        border-radius: 10px;
-        height: 20px;
-        font-size: 15px;
-        padding-top: 15px;
-        padding-left: 15px;
-    }
-    .card-form{
-        height: 60%;
-    }
-    .button-iniciar{
-        font-size: 15px;
-        width: 200px;
-    }
-}
-@media (min-width:1510px){
-    .formulario{
-        width: 100%;
-        justify-content: center;
-        align-items: center;
-
-    }
-
-    .card-form{
-        height: 60%;
-    }
-    .button-iniciar{
-        padding: 20px 50px 20px 50px;
-    }
-    .card-form .formulario input{
-        width: 450px;
-        border-radius: 10px;
-        height: 50px;
-        font-size: 30px;
-        padding-top: 20px;
-        padding-left: 20px;
-    }
-    .information{
-        font-size: 30px;
-    }
-    .posicioncard img{
-        width: 100px;
-        height: 100px;
-    }
-    .posicioncard h2{
-        font-size: 50px;
-    }
-    .text-form{
-        font-size: 30px;
-    }
-    .button-iniciar{
-        font-size: 30px;
-
-        width: 400px;
-    }
-    .input-class{
-        width: 500px;
-
-    }
-
+.seccion-Utils div{
+    margin-left: 10px;
 }
 
-/* crear cuenta */
-.container-signup{
+/* style of sign Up*/
+
+.container-card{
     width: 100%;
     height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+   
 }
-.card-signup{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 40%;
-    height: 80vh;
-    background-color: white;
-    -webkit-box-shadow: 0px 0px 15px 5px rgba(156, 156, 156, 0.45);
-    box-shadow: 0px 0px 15px 5px rgba(201, 201, 201, 0.45);
+.card{
+    font-family: Arial, Helvetica, sans-serif;
+    width: 30%;
+    height: 70vh;
+    margin: auto;
+  padding-top: 3%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  
+    box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset, rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+
 }
-.form-singup{
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+.select-img{
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+    background-color: #107cfa;
+}
+.select-img img{
+    border-radius: 50%;
+}
+.container-img-input{
     padding: 10px;
+    display: 100%;
+    display: flex;
+    margin-top: 2%;
+    align-items: center;
+    justify-content: center;
 }
-.signup-button{
-    width: 90%;
-    border-radius: 5px;
-    background-color: blue;
-    color: white;
-    padding: 10px;
+.container-img-input input{
+    margin-left: 1%;
+}
+
+.input-correo-signUp{
+    margin-left: 2%;
+    margin-top: 5%;
     border: none;
-}
-.form-singup input{
+    font-size: 16px;
+    font-family: Arial, Helvetica, sans-serif;
+    width: 80%;
     padding: 10px;
+    border-bottom: 2px solid #b7bbbe;
+}
+.input-password-signup{
+    margin-top: 5%;
+    font-size: 16px;
+    margin-left: 2%;
+    border: none;
+    padding: 10px;
+    width: 80%;
+    border-bottom: 2px solid #b7bbbe;
+}
+.container-button-signUp{
+    width: 100%;
+ 
+    display: flex;
+    justify-content: center;
+}
+.button-signUp{
+    border-radius: 6px;
+    border: none;
+    font-weight: 600;
+    padding: 8px;
+    width: 50%;
+    height: 35px;
+    margin-top: 5%;
+    background-color: #4b7dfa;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.loading{
+    margin: auto;
+    width: 20px;
+    height: 20px;
+    display: none;
+    border-radius: 50%;
+    border-top: 1px solid white;
+    border-bottom: 1px solid white;
+    border-left: 1px solid white;
+    border-right: 1px solid #107cfa;
+    background-color: transparent;
+    animation: loadingAround 2s linear infinite;
+}
+
+@keyframes loadingAround {
+    from{
+        transform: rotate(0deg);
+    }
+    to{
+        transform: rotate(360deg);
+    }
 }
